--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,10 @@ jobs:
     steps:
     - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck'
       displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
+    # - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+    #   displayName: 'Install ImportExcel'
+    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
+      displayName: 'Install SqlServer'
     - powershell: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
@@ -53,8 +55,10 @@ jobs:
     steps:
     - pwsh: 'Install-Module -Name Pester -Force'
       displayName: 'Update Pester'
-    - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
+    # - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+    #   displayName: 'Install ImportExcel'
+    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
+      displayName: 'Install SqlServer'
     - pwsh: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
@@ -71,8 +75,10 @@ jobs:
     steps:
     - powershell: 'Install-Module -Name Pester -Force'
       displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
+    # - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+    #   displayName: 'Install ImportExcel'
+    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
+      displayName: 'Install SqlServer'
     - powershell: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
@@ -91,8 +97,10 @@ jobs:
       displayName: 'Install mono-libgdiplus'
     - powershell: 'Install-Module -Name Pester -Force'
       displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
+    # - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+    #   displayName: 'Install ImportExcel'
+    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
+      displayName: 'Install SqlServer'
     - powershell: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
