--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,8 @@ jobs:
     steps:
     - powershell: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
       displayName: 'Update Pester'
-    # - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-    #   displayName: 'Install ImportExcel'
+    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+      displayName: 'Install ImportExcel'
     - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
       displayName: 'Install SqlServer'
     - powershell: './CI/CI.ps1 -Test'
@@ -55,8 +55,8 @@ jobs:
     steps:
     - pwsh: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
       displayName: 'Update Pester'
-    # - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-    #   displayName: 'Install ImportExcel'
+    - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+      displayName: 'Install ImportExcel'
     - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
       displayName: 'Install SqlServer'
     - pwsh: './CI/CI.ps1 -Test'
@@ -75,8 +75,8 @@ jobs:
     steps:
     - powershell: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
       displayName: 'Update Pester'
-    # - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-    #   displayName: 'Install ImportExcel'
+    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+      displayName: 'Install ImportExcel'
     - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
       displayName: 'Install SqlServer'
     - powershell: './CI/CI.ps1 -Test'
@@ -97,8 +97,8 @@ jobs:
       displayName: 'Install mono-libgdiplus'
     - powershell: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
       displayName: 'Update Pester'
-    # - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-    #   displayName: 'Install ImportExcel'
+    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+      displayName: 'Install ImportExcel'
     - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
       displayName: 'Install SqlServer'
     - powershell: './CI/CI.ps1 -Test'
