--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,84 +20,48 @@ jobs:
       vmImage: 'windows-latest'
 
     steps:
-    - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck'
+    # - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck'
+    - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck -MaximumVersion 4.99.99'
       displayName: 'Update Pester'
     - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
       displayName: 'Install ImportExcel'
     - powershell: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
+  # - job: WindowsPSCore
+  #   pool:
+  #     vmImage: 'windows-latest'
 
-    # - powershell: './CI/CI.ps1 -Artifact'
-    #   displayName: 'Prepare Artifact'
-    # - task: PublishPipelineArtifact@1
-    #   inputs:
-    #     targetPath: '$(Build.ArtifactStagingDirectory)'
-    #     artifact: 'Modules'
-    # - powershell: './CI/CI.ps1 -Analyzer'
-    #   displayName: 'Invoke ScriptAnalyzer'
-    # - task: PublishPipelineArtifact@1
-    #   inputs:
-    #     targetPath: '$(Build.SourcesDirectory)'
-    #     artifact: 'Source'
+  #   steps:
+  #   - pwsh: 'Install-Module -Name Pester -Force'
+  #     displayName: 'Update Pester'
+  #   - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+  #     displayName: 'Install ImportExcel'
+  #   - pwsh: './CI/CI.ps1 -Test'
+  #     displayName: 'Install and Test'
 
-  - job: WindowsPSCore
-    pool:
-      vmImage: 'windows-latest'
+  # - job: Ubuntu
+  #   pool:
+  #     vmImage: 'ubuntu-latest'
 
-    steps:
-    - pwsh: 'Install-Module -Name Pester -Force'
-      displayName: 'Update Pester'
-    - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
-    - pwsh: './CI/CI.ps1 -Test'
-      displayName: 'Install and Test'
+  #   steps:
+  #   - powershell: 'Install-Module -Name Pester -Force'
+  #     displayName: 'Update Pester'
+  #   - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+  #     displayName: 'Install ImportExcel'
+  #   - powershell: './CI/CI.ps1 -Test'
+  #     displayName: 'Install and Test'
 
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
+  # - job: macOS
+  #   pool:
+  #     vmImage: 'macOS-latest'
 
-  - job: Ubuntu
-    pool:
-      vmImage: 'ubuntu-latest'
-
-    steps:
-    - powershell: 'Install-Module -Name Pester -Force'
-      displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
-    - powershell: './CI/CI.ps1 -Test'
-      displayName: 'Install and Test'
-
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
-
-  - job: macOS
-    pool:
-      vmImage: 'macOS-latest'
-
-    steps:
-    - script: brew install mono-libgdiplus
-      displayName: 'Install mono-libgdiplus'
-    - powershell: 'Install-Module -Name Pester -Force'
-      displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
-    - powershell: './CI/CI.ps1 -Test'
-      displayName: 'Install and Test'
-
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
+  #   steps:
+  #   - script: brew install mono-libgdiplus
+  #     displayName: 'Install mono-libgdiplus'
+  #   - powershell: 'Install-Module -Name Pester -Force'
+  #     displayName: 'Update Pester'
+  #   - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+  #     displayName: 'Install ImportExcel'
+  #   - powershell: './CI/CI.ps1 -Test'
+  #     displayName: 'Install and Test'
