don't install pester, see what's installed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,12 @@ jobs:
     steps:
     # - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck'
     # - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck -MaximumVersion 4.99.99'
-    - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1'    
-      displayName: 'Update Pester'
+    # - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1'    
+    #   displayName: 'Update Pester'
     - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
       displayName: 'Install ImportExcel'
+    - powershell: 'gmo -list pester'
+      displayName: 'gmo pester'
     - powershell : 'Invoke-Pester'
       displayName: 'Run tests'
     # - powershell: './CI/CI.ps1 -Test'
