add failing test to see how the pipeline reacts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,11 +25,11 @@ jobs:
     - powershell: 'Uninstall-Module Pester -MinimumVersion 5.0.0 -Force'    
       displayName: 'Remove Pester v5'
     - powershell: 'Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1'    
-      displayName: 'Update Pester'
+      displayName: 'Install Pester 4.10'
     - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
       displayName: 'Install ImportExcel'
-    - powershell: 'gmo -list pester'
-      displayName: 'gmo pester'
+    # - powershell: 'gmo -list pester'
+    #   displayName: 'gmo pester'
     - powershell : 'Invoke-Pester'
       displayName: 'Run tests'
     # - powershell: './CI/CI.ps1 -Test'
