Udated azure-pipelines.yml from master.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
   branches:
     include:
@@ -20,92 +15,52 @@ jobs:
       vmImage: 'windows-latest'
 
     steps:
-    - powershell: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
-      displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
-    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
-      displayName: 'Install SqlServer'
-    - powershell: './CI/CI.ps1 -Test'
-      displayName: 'Install and Test'
+    - powershell : | 
+        Uninstall-Module Pester -MinimumVersion 5.0.0 -Force
+        Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
+        Install-Module -Name ImportExcel -Force -SkipPublisherCheck
+        Install-Module -Name SqlServer -Force -SkipPublisherCheck
+        
+        $r = Invoke-Pester -PassThru
+        if($r.FailedCount -gt 0){throw "tests failed"}
+      displayName: 'Remove/Install Modules - Run tests'
+    # - powershell: './CI/CI.ps1 -Test'
+    #   displayName: 'Install and Test'
 
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
+  # - job: WindowsPSCore
+  #   pool:
+  #     vmImage: 'windows-latest'
 
-    # - powershell: './CI/CI.ps1 -Artifact'
-    #   displayName: 'Prepare Artifact'
-    # - task: PublishPipelineArtifact@1
-    #   inputs:
-    #     targetPath: '$(Build.ArtifactStagingDirectory)'
-    #     artifact: 'Modules'
-    # - powershell: './CI/CI.ps1 -Analyzer'
-    #   displayName: 'Invoke ScriptAnalyzer'
-    # - task: PublishPipelineArtifact@1
-    #   inputs:
-    #     targetPath: '$(Build.SourcesDirectory)'
-    #     artifact: 'Source'
+  #   steps:
+  #   - pwsh: 'Install-Module -Name Pester -Force'
+  #     displayName: 'Update Pester'
+  #   - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+  #     displayName: 'Install ImportExcel'
+  #   - pwsh: './CI/CI.ps1 -Test'
+  #     displayName: 'Install and Test'
 
-  - job: WindowsPSCore
-    pool:
-      vmImage: 'windows-latest'
+  # - job: Ubuntu
+  #   pool:
+  #     vmImage: 'ubuntu-latest'
 
-    steps:
-    - pwsh: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
-      displayName: 'Update Pester'
-    - pwsh: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
-    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
-      displayName: 'Install SqlServer'
-    - pwsh: './CI/CI.ps1 -Test'
-      displayName: 'Install and Test'
+  #   steps:
+  #   - powershell: 'Install-Module -Name Pester -Force'
+  #     displayName: 'Update Pester'
+  #   - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+  #     displayName: 'Install ImportExcel'
+  #   - powershell: './CI/CI.ps1 -Test'
+  #     displayName: 'Install and Test'
 
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
+  # - job: macOS
+  #   pool:
+  #     vmImage: 'macOS-latest'
 
-  - job: Ubuntu
-    pool:
-      vmImage: 'ubuntu-latest'
-
-    steps:
-    - powershell: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
-      displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
-    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
-      displayName: 'Install SqlServer'
-    - powershell: './CI/CI.ps1 -Test'
-      displayName: 'Install and Test'
-
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
-
-  - job: macOS
-    pool:
-      vmImage: 'macOS-latest'
-
-    steps:
-    - script: brew install mono-libgdiplus
-      displayName: 'Install mono-libgdiplus'
-    - powershell: 'Install-Module -Name Pester -Force -MaximumVersion 4.99.99 -SkipPublisherCheck'
-      displayName: 'Update Pester'
-    - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
-      displayName: 'Install ImportExcel'
-    - powershell: 'Install-Module -Name SqlServer -Force -SkipPublisherCheck'
-      displayName: 'Install SqlServer'
-    - powershell: './CI/CI.ps1 -Test'
-      displayName: 'Install and Test'
-
-    # - task: PublishTestResults@2
-    #   inputs:
-    #     testResultsFormat: 'NUnit'
-    #     testResultsFiles: '**/TestResults*.xml'
-    #     failTaskOnFailedTests: true
+  #   steps:
+  #   - script: brew install mono-libgdiplus
+  #     displayName: 'Install mono-libgdiplus'
+  #   - powershell: 'Install-Module -Name Pester -Force'
+  #     displayName: 'Update Pester'
+  #   - powershell: 'Install-Module -Name ImportExcel -Force -SkipPublisherCheck'
+  #     displayName: 'Install ImportExcel'
+  #   - powershell: './CI/CI.ps1 -Test'
+  #     displayName: 'Install and Test'
