added PS Core step to CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ jobs:
       vmImage: 'windows-latest'
 
     steps:
-    - powershell : | 
+    - powershell: | 
         Uninstall-Module Pester -MinimumVersion 5.0.0 -Force
         Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
         Install-Module -Name ImportExcel -Force -SkipPublisherCheck
@@ -26,6 +26,20 @@ jobs:
       displayName: 'Remove/Install Modules - Run tests'
     # - powershell: './CI/CI.ps1 -Test'
     #   displayName: 'Install and Test'
+
+  - job: WindowsPSCore
+    pool:
+      vmImage: 'windows-latest'
+    steps:
+    - pwsh: | 
+        Uninstall-Module Pester -MinimumVersion 5.0.0 -Force
+        Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
+        Install-Module -Name ImportExcel -Force -SkipPublisherCheck
+        Install-Module -Name SqlServer -Force -SkipPublisherCheck
+        
+        $r = Invoke-Pester -PassThru
+        if($r.FailedCount -gt 0){throw "tests failed"}
+      displayName: 'Remove/Install Modules - Run tests'
 
   # - job: WindowsPSCore
   #   pool:
