--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,18 +31,19 @@ jobs:
     pool:
       vmImage: 'windows-latest'
     steps:
-    - pwsh: | 
+    - pwsh: |
+        gmo -list pester 
         # $r=gmo -list pester|select -First 1
         # if($r.Version -gt [version]'5.0.0') {
         #   Uninstall-Module Pester -MinimumVersion 5.0.0 -Force
         # }
         
         # Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
-        Install-Module -Name ImportExcel -Force -SkipPublisherCheck
-        Install-Module -Name SqlServer -Force -SkipPublisherCheck
+        # Install-Module -Name ImportExcel -Force -SkipPublisherCheck
+        # Install-Module -Name SqlServer -Force -SkipPublisherCheck
         
-        $r = Invoke-Pester -PassThru
-        if($r.FailedCount -gt 0){throw "tests failed"}
+        # $r = Invoke-Pester -PassThru
+        # if($r.FailedCount -gt 0){throw "tests failed"}
       displayName: 'Remove/Install Modules - Run tests'
 
   # - job: WindowsPSCore
