--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,12 +31,11 @@ jobs:
     pool:
       vmImage: 'windows-latest'
     steps:
-    - pwsh: |
-        gmo -list pester 
-        # $r=gmo -list pester|select -First 1
-        # if($r.Version -gt [version]'5.0.0') {
-        #   Uninstall-Module Pester -MinimumVersion 5.0.0 -Force
-        # }
+    - pwsh: |        
+        $r=gmo -list pester|select -First 1
+        if($r.Version -ge [version]'5.0') {
+          Uninstall-Module Pester -MinimumVersion 5.0 -Force
+        }
         
         # Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
         # Install-Module -Name ImportExcel -Force -SkipPublisherCheck
