--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,9 @@ jobs:
     steps:
     - pwsh: |        
         $r=gmo -list pester|select -First 1
+        $r
         if($r.Version -ge [version]'5.0') {
-          Uninstall-Module Pester -MinimumVersion 5.0 -Force
+          Uninstall-Module Pester -MinimumVersion ($r.Version.tostring()) -Force
         }
         
         # Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
