--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,13 +32,14 @@ jobs:
       vmImage: 'windows-latest'
     steps:
     - pwsh: |        
-        $r=gmo -list pester|select -First 1
-        $r
-        if($r.Version -ge [version]'5.0') {
-          Uninstall-Module Pester -MinimumVersion ($r.Version.tostring()) -Force
-        }
+        # $r=gmo -list pester|select -First 1
+        # $r
+        # if($r.Version -ge [version]'5.0') {
+        #   Uninstall-Module Pester -MinimumVersion ($r.Version.tostring()) -Force
+        # }
         
-        # Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
+        Uninstall-Module Pester
+        Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
         # Install-Module -Name ImportExcel -Force -SkipPublisherCheck
         # Install-Module -Name SqlServer -Force -SkipPublisherCheck
         
