--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,14 +31,15 @@ jobs:
     pool:
       vmImage: 'windows-latest'
     steps:
-    - pwsh: |        
+    - pwsh: |    
+        gmo -list pester
+        Uninstall-Module pester -Verbose
+
         # $r=gmo -list pester|select -First 1
         # $r
         # if($r.Version -ge [version]'5.0') {
         #   Uninstall-Module Pester -MinimumVersion ($r.Version.tostring()) -Force
-        # }
-        gmo -list pester
-        Uninstall-Module pester -Verbose
+        # }    
         # Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
         # Install-Module -Name ImportExcel -Force -SkipPublisherCheck
         # Install-Module -Name SqlServer -Force -SkipPublisherCheck
@@ -59,9 +60,26 @@ jobs:
   #   - pwsh: './CI/CI.ps1 -Test'
   #     displayName: 'Install and Test'
 
-  # - job: Ubuntu
-  #   pool:
-  #     vmImage: 'ubuntu-latest'
+  - job: Ubuntu
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - pwsh: |    
+        gmo -list pester
+        Uninstall-Module pester -Verbose
+
+        # $r=gmo -list pester|select -First 1
+        # $r
+        # if($r.Version -ge [version]'5.0') {
+        #   Uninstall-Module Pester -MinimumVersion ($r.Version.tostring()) -Force
+        # }    
+        # Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
+        # Install-Module -Name ImportExcel -Force -SkipPublisherCheck
+        # Install-Module -Name SqlServer -Force -SkipPublisherCheck
+        
+        # $r = Invoke-Pester -PassThru
+        # if($r.FailedCount -gt 0){throw "tests failed"}
+      displayName: 'Remove/Install Modules - Run tests'
 
   #   steps:
   #   - powershell: 'Install-Module -Name Pester -Force'
@@ -71,9 +89,26 @@ jobs:
   #   - powershell: './CI/CI.ps1 -Test'
   #     displayName: 'Install and Test'
 
-  # - job: macOS
-  #   pool:
-  #     vmImage: 'macOS-latest'
+  - job: macOS
+    pool:
+      vmImage: 'macOS-latest'
+    steps:
+    - pwsh: |    
+        gmo -list pester
+        Uninstall-Module pester -Verbose
+
+        # $r=gmo -list pester|select -First 1
+        # $r
+        # if($r.Version -ge [version]'5.0') {
+        #   Uninstall-Module Pester -MinimumVersion ($r.Version.tostring()) -Force
+        # }    
+        # Install-Module -Name Pester -Force -SkipPublisherCheck -RequiredVersion 4.10.1
+        # Install-Module -Name ImportExcel -Force -SkipPublisherCheck
+        # Install-Module -Name SqlServer -Force -SkipPublisherCheck
+        
+        # $r = Invoke-Pester -PassThru
+        # if($r.FailedCount -gt 0){throw "tests failed"}
+      displayName: 'Remove/Install Modules - Run tests'
 
   #   steps:
   #   - script: brew install mono-libgdiplus
