Comment out publish of test results

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,18 +29,18 @@ jobs:
         testResultsFiles: '**/TestResults*.xml'
         failTaskOnFailedTests: true
 
-    - powershell: './CI/CI.ps1 -Artifact'
-      displayName: 'Prepare Artifact'
-    - task: PublishPipelineArtifact@1
-      inputs:
-        targetPath: '$(Build.ArtifactStagingDirectory)'
-        artifact: 'Modules'
-    - powershell: './CI/CI.ps1 -Analyzer'
-      displayName: 'Invoke ScriptAnalyzer'
-    - task: PublishPipelineArtifact@1
-      inputs:
-        targetPath: '$(Build.SourcesDirectory)'
-        artifact: 'Source'
+    # - powershell: './CI/CI.ps1 -Artifact'
+    #   displayName: 'Prepare Artifact'
+    # - task: PublishPipelineArtifact@1
+    #   inputs:
+    #     targetPath: '$(Build.ArtifactStagingDirectory)'
+    #     artifact: 'Modules'
+    # - powershell: './CI/CI.ps1 -Analyzer'
+    #   displayName: 'Invoke ScriptAnalyzer'
+    # - task: PublishPipelineArtifact@1
+    #   inputs:
+    #     targetPath: '$(Build.SourcesDirectory)'
+    #     artifact: 'Source'
 
   - job: WindowsPSCore
     pool:
@@ -50,11 +50,11 @@ jobs:
     - pwsh: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'NUnit'
-        testResultsFiles: '**/TestResults*.xml'
-        failTaskOnFailedTests: true
+    # - task: PublishTestResults@2
+    #   inputs:
+    #     testResultsFormat: 'NUnit'
+    #     testResultsFiles: '**/TestResults*.xml'
+    #     failTaskOnFailedTests: true
 
   - job: Ubuntu
     pool:
@@ -64,11 +64,11 @@ jobs:
     - powershell: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'NUnit'
-        testResultsFiles: '**/TestResults*.xml'
-        failTaskOnFailedTests: true
+    # - task: PublishTestResults@2
+    #   inputs:
+    #     testResultsFormat: 'NUnit'
+    #     testResultsFiles: '**/TestResults*.xml'
+    #     failTaskOnFailedTests: true
 
   - job: macOS
     pool:
@@ -78,8 +78,8 @@ jobs:
     - powershell: './CI/CI.ps1 -Test'
       displayName: 'Install and Test'
 
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'NUnit'
-        testResultsFiles: '**/TestResults*.xml'
-        failTaskOnFailedTests: true
+    # - task: PublishTestResults@2
+    #   inputs:
+    #     testResultsFormat: 'NUnit'
+    #     testResultsFiles: '**/TestResults*.xml'
+    #     failTaskOnFailedTests: true
