--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-18.04, macos-latest]
+        os: [windows-latest]
+        # os: [windows-latest, ubuntu-18.04, macos-latest]
     steps:
     - uses: actions/checkout@v1      
     - name: Basics
