add pull_request section

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ on:
     branches:
       - master
 
+  pull_request:    
+    branches:
+      - master
+
 jobs:
   validate:
     runs-on: ${{ matrix.os }}
