--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,6 @@ jobs:
         os: [windows-latest, ubuntu-18.04, macos-latest]
     steps:
     - uses: actions/checkout@v1      
-    - name: Basics
+    - name: Run Continuous Integration
       run : ./ContinuousIntegration/ContinuousIntegration.ps1
       shell: pwsh
